[gd_scene load_steps=19 format=2]

[ext_resource path="res://OnClick/onClick5/SpotDiffWorld5.gd" type="Script" id=1]
[ext_resource path="res://OnClick/images/STDImg1.png" type="Texture" id=2]
[ext_resource path="res://OnClick/images/STDImg1.1.png" type="Texture" id=3]
[ext_resource path="res://OnClick/onClick5/Area2D.gd" type="Script" id=4]
[ext_resource path="res://OnClick/images/red_circle.png" type="Texture" id=5]
[ext_resource path="res://OnClick/onClick5/Area2D2.gd" type="Script" id=6]
[ext_resource path="res://OnClick/onClick5/Area2D3.gd" type="Script" id=7]
[ext_resource path="res://OnClick/onClick5/Area2D4.gd" type="Script" id=8]
[ext_resource path="res://OnClick/onClick5/Area2D5.gd" type="Script" id=9]
[ext_resource path="res://Fonts/DisplayFont.tres" type="DynamicFont" id=10]
[ext_resource path="res://OnClick/onClick5/Label.gd" type="Script" id=11]
[ext_resource path="res://OnClick/images/BeigeBackground.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 641.45, 732.687 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Img_a" type="Sprite" parent="."]
position = Vector2( 640, 350 )
z_index = -10
texture = ExtResource( 2 )

[node name="Img_b" type="Sprite" parent="."]
position = Vector2( 640, 1090 )
z_index = -10
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 30, 620 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 30, 1360 )
shape = SubResource( 1 )

[node name="diff_1_a" type="Sprite" parent="Area2D" groups=[
"diff",
]]
visible = false
position = Vector2( 30, 620 )
scale = Vector2( 0.361052, 0.350322 )
texture = ExtResource( 5 )

[node name="diff_1_b" type="Sprite" parent="Area2D"]
visible = false
position = Vector2( 30, 1360 )
scale = Vector2( 0.361052, 0.350322 )
texture = ExtResource( 5 )

[node name="Area2D2" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 520, 320 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 520, 1060 )
shape = SubResource( 2 )

[node name="diff_2_a" type="Sprite" parent="Area2D2" groups=[
"diff",
]]
visible = false
position = Vector2( 520, 320 )
scale = Vector2( 0.414163, 0.400215 )
texture = ExtResource( 5 )

[node name="diff_2_b" type="Sprite" parent="Area2D2"]
visible = false
position = Vector2( 520, 1060 )
scale = Vector2( 0.414163, 0.400215 )
texture = ExtResource( 5 )

[node name="Area2D3" type="Area2D" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 940, 140 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 940, 880 )
shape = SubResource( 3 )

[node name="diff_3_a" type="Sprite" parent="Area2D3" groups=[
"diff",
]]
visible = false
position = Vector2( 940, 140 )
scale = Vector2( 0.318133, 0.307403 )
texture = ExtResource( 5 )

[node name="diff_3_b" type="Sprite" parent="Area2D3"]
visible = false
position = Vector2( 940, 880 )
scale = Vector2( 0.318133, 0.307403 )
texture = ExtResource( 5 )

[node name="Area2D4" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 1070, 380 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 1070, 1120 )
shape = SubResource( 4 )

[node name="diff_4_a" type="Sprite" parent="Area2D4" groups=[
"diff",
]]
visible = false
position = Vector2( 1070, 380 )
scale = Vector2( 0.285408, 0.285408 )
texture = ExtResource( 5 )

[node name="diff_4_b" type="Sprite" parent="Area2D4"]
visible = false
position = Vector2( 1070, 1120 )
scale = Vector2( 0.285408, 0.285408 )
texture = ExtResource( 5 )

[node name="Area2D5" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
position = Vector2( 150, 200 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D5"]
position = Vector2( 150, 940 )
shape = SubResource( 5 )

[node name="diff_5_a" type="Sprite" parent="Area2D5" groups=[
"diff",
]]
visible = false
position = Vector2( 150, 200 )
scale = Vector2( 0.371245, 0.371245 )
texture = ExtResource( 5 )

[node name="diff_5_b" type="Sprite" parent="Area2D5"]
visible = false
position = Vector2( 150, 940 )
scale = Vector2( 0.371245, 0.371245 )
texture = ExtResource( 5 )

[node name="Area2D6" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D6"]
position = Vector2( 638.453, 717.976 )
shape = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640.5, 800 )
offset = Vector2( 0, -30 )
current = true
zoom = Vector2( 2.1, 4.5 )

[node name="Label" type="Label" parent="."]
margin_left = 560.0
margin_top = 1475.0
margin_right = 725.0
margin_bottom = 1571.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.803922, 0.027451, 0.027451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="Label"]

[node name="Diffs_found_display" type="Label" parent="."]
margin_left = 1080.0
margin_top = 1475.0
margin_right = 1245.0
margin_bottom = 1557.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.121569, 0.509804, 0.211765, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )

[node name="HP_display" type="Label" parent="."]
margin_left = 120.0
margin_top = 1475.0
margin_right = 285.0
margin_bottom = 1557.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.121569, 0.509804, 0.211765, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
uppercase = true

[node name="Background_color" type="Sprite" parent="."]
position = Vector2( 627.277, 753.454 )
scale = Vector2( 2.84222, 4.20619 )
z_index = -100
texture = ExtResource( 12 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="visibility_changed" from="Area2D/diff_1_a" to="." method="_on_diff_1_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D/diff_1_a" to="Area2D" method="_on_diff_1_a_visibility_changed"]
[connection signal="input_event" from="Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="input_event" from="Area2D2" to="Area2D2" method="_on_Area2D2_input_event"]
[connection signal="visibility_changed" from="Area2D2/diff_2_a" to="." method="_on_diff_2_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D2/diff_2_a" to="Area2D2" method="_on_diff_2_a_visibility_changed"]
[connection signal="input_event" from="Area2D3" to="." method="_on_Area2D3_input_event"]
[connection signal="input_event" from="Area2D3" to="Area2D3" method="_on_Area2D3_input_event"]
[connection signal="visibility_changed" from="Area2D3/diff_3_a" to="." method="_on_diff_3_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D3/diff_3_a" to="Area2D3" method="_on_diff_3_a_visibility_changed"]
[connection signal="input_event" from="Area2D4" to="." method="_on_Area2D4_input_event"]
[connection signal="input_event" from="Area2D4" to="Area2D4" method="_on_Area2D4_input_event"]
[connection signal="visibility_changed" from="Area2D4/diff_4_a" to="." method="_on_diff_4_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D4/diff_4_a" to="Area2D4" method="_on_diff_4_a_visibility_changed"]
[connection signal="input_event" from="Area2D5" to="." method="_on_Area2D5_input_event"]
[connection signal="input_event" from="Area2D5" to="Area2D5" method="_on_Area2D5_input_event"]
[connection signal="visibility_changed" from="Area2D5/diff_5_a" to="." method="_on_diff_5_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D5/diff_5_a" to="Area2D5" method="_on_diff_5_a_visibility_changed"]
[connection signal="input_event" from="Area2D6" to="." method="_on_Area2D6_input_event"]
[connection signal="timeout" from="Label/Timer" to="Label" method="_on_Timer_timeout"]
[connection signal="timeout" from="Label/Timer" to="." method="_on_Timer_timeout"]
